--- a/src/components/DataTable/index.css
+++ b/src/components/DataTable/index.css
@@ -1,6 +1,6 @@
 .table {
-    width: 80%;
-    height: 60%;
+    width: 90%;
+    height: 80%;
     overflow-y: auto;
 }
 
@@ -9,7 +9,7 @@ table, tr, td, tbody, thead {
 }   
 
 table {
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     border-collapse: collapse;
 }
