--- a/src/components/DataTable/index.css
+++ b/src/components/DataTable/index.css
@@ -1,15 +1,19 @@
-.table {
+.data-table {
     width: 90%;
     height: 80%;
     overflow-y: auto;
 }
 
-table, tr, td, tbody, thead {
+td {
     border: 0.5vmin solid var(--text-color);
 }   
 
 table {
     min-width: 100%;
-    min-height: 100%;
+    max-height: 100%;
     border-collapse: collapse;
+}
+
+tbody, thead {
+    width: 100%;
 }
