--- a/src/components/Pagination/index.css
+++ b/src/components/Pagination/index.css
@@ -10,6 +10,7 @@
     border-radius: 50%;
     border: 0.5vmin solid var(--text-color);
     background-color: var(--secondary);
+    color: var(--main-bg);
     font-weight: bold;
     display: flex;
 }
@@ -17,4 +18,5 @@
 .pagination button:disabled {
     background-color: transparent;
     opacity: 0.6;
+    color: white;
 }
